force-app/main/default/objects/Interacoes__c/Interacoes__c.object-meta.xml
<CustomObject>
    <label>Interação</label>
    <nameField>
        <displayFormat>INT-{000000000}</displayFormat>
        <label>Nome de Interacoes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>