force-app/main/default/objects/Interacoes__c/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>