force-app/main/default/objects/Interacoes__c/fields/Atribuido_a__c.field-meta.xml
<CustomField>
    <fullName>Atribuido_a__c</fullName>
    <label>Atribuido a</label>
    <length>50</length>
    <type>Text</type>
</CustomField>