force-app/main/default/objects/Interacoes__c/fields/Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Classificacao__c</fullName>
    <label>Classificação</label>
    <length>30</length>
    <type>Text</type>
</CustomField>