force-app/main/default/objects/Interacoes__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>