force-app/main/default/objects/Interacoes__c/fields/Criado_por__c.field-meta.xml
<CustomField>
    <fullName>Criado_por__c</fullName>
    <label>Criado por</label>
    <length>70</length>
    <type>Text</type>
</CustomField>