force-app/main/default/objects/Interacoes__c/fields/Data_de_conclusao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_conclusao__c</fullName>
    <label>Data de conclusão</label>
    <type>DateTime</type>
</CustomField>