force-app/main/default/objects/Interacoes__c/fields/Id_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente__c</fullName>
    <label>Id Cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>