force-app/main/default/objects/Interacoes__c/fields/N_do_Protocolo__c.field-meta.xml
<CustomField>
    <fullName>N_do_Protocolo__c</fullName>
    <description>OID da interação dentro do ERP</description>
    <label>Código</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>