force-app/main/default/objects/Interacoes__c/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <label>Placa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>