force-app/main/default/objects/Interacoes__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status da interação dentro do ERP</description>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>