force-app/main/default/objects/Interacoes__c/fields/Termo__c.field-meta.xml
<CustomField>
    <fullName>Termo__c</fullName>
    <label>Termo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>