force-app/main/default/objects/Interacoes__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo da reclamação. Alimentado via integração com o ERP</description>
    <label>Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>